--- a/local.yml
+++ b/local.yml
@@ -1,5 +1,12 @@
 - hosts: localhost
   become: true
   tasks:
+  
   - name: Install htop
     apt: name=htop
+
+  - name: Install mc
+    apt: name=mc
+
+  - name: Install tmux
+    apt: name=tmux
