--- a/local.yml
+++ b/local.yml
@@ -1,10 +1,9 @@
 - hosts: localhost
   become: true
-  tasks:
+  pre_tasks:
+    - name: update repositories
+      apt: update_cache=yes
+      changed_when: False
 
-    - name: Install packages
-      apt: name={{item}}
-      with_items:
-        - htop
-        - mc
-        - tmux
+  tasks:
+    - include: tasks/packages.yml
