--- a/tasks/gnome.yml
+++ b/tasks/gnome.yml
@@ -1,5 +1,7 @@
 - name: Install python-psutil package
-  -pip: name=psutil
+
+  pip:
+    name: psutil
 
 - name: Copy wallpaper file
   copy: src=files/Earth-Horizon.jpg dest=/home/cp/.Earth-Horizon.jpg owner=cp group=cp mode=600
