--- a/tasks/downloads.yml
+++ b/tasks/downloads.yml
@@ -1,9 +1,12 @@
-- hosts: all
+- name: Downloading files
 
   vars:
     focal_dir: focal
     focal_name: focalgdm3.sh
     focal: wget https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
 
+- name: Create focal dirctory
   file: state=directory path={{ focal_dir }}
+
+- name: Download focal
   get_url: url={{ focal }} dest={{ focal }}/{{ focal_name }}
