--- a/tasks/downloads.yml
+++ b/tasks/downloads.yml
@@ -5,6 +5,8 @@
     focal_name: focalgdm3.sh
     focal: wget https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
 
+tasks:
+
 - name: Create focal dirctory
   file: state=directory path={{ focal_dir }}
 
