--- a/tasks/downloads.yml
+++ b/tasks/downloads.yml
@@ -5,10 +5,10 @@
     focal_name: focalgdm3.sh
     focal: wget https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
 
-tasks:
+- tasks:
 
-- name: Create focal dirctory
-  file: state=directory path={{ focal_dir }}
+  - name: Create focal dirctory
+    file: state=directory path={{ focal_dir }}
 
-- name: Download focal
-  get_url: url={{ focal }} dest={{ focal }}/{{ focal_name }}
+  - name: Download focal
+    get_url: url={{ focal }} dest={{ focal }}/{{ focal_name }}
