--- a/tasks/downloads.yml
+++ b/tasks/downloads.yml
@@ -8,5 +8,7 @@
 - tasks:
 
   - name: Create focal dirctory
-    file: state=directory path={{ focal_dir }}
+    file:
+      state: directory
+      path: {{ focal_dir }}
     get_url: url={{ focal }} dest={{ focal }}/{{ focal_name }}
