--- a/tasks/downloads.yml
+++ b/tasks/downloads.yml
@@ -1,12 +1,12 @@
 - name: Downloading files
 
   tasks:
-    name: Create focal dirctory
-    file:
-      state: directory
-      path: focalgdm3.sh
+    - name: Create focal dirctory
+      file:
+        state: directory
+        path: focalgdm3.sh
 
-    name: Get file
-    get_url:
-      url: wget https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
-      dest: focal/focalgdm3.sh
+    - name: Get file
+      get_url:
+        url: wget https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
+        dest: focal/focalgdm3.sh
