Corrected syntrax error

--- a/tasks/downloads.yml
+++ b/tasks/downloads.yml
@@ -9,5 +9,5 @@
 
     - name: Get file
       get_url:
-        url: wget https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
+        url: https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
         dest: focal/focalgdm3.sh
