--- a/tasks/downloads.yml
+++ b/tasks/downloads.yml
@@ -2,7 +2,7 @@
 
   tasks:
 
-    - name: Create focal dirctory
-      file:
-        state: directory
-        path: focalgdm3.sh
+    - name: Get file
+      get_url:
+        url: https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
+        dest: ./
