--- a/tasks/downloads.yml
+++ b/tasks/downloads.yml
@@ -4,10 +4,10 @@
 
     - name: Create focal dirctory
       file:
-        state: directory
         path: focalgdm3.sh
+        state: directory
 
     - name: Get file
       get_url:
-        url: "https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh"
+        url: https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
         dest: focal/focalgdm3.sh
