Corrected syntrax error

--- a/tasks/downloads.yml
+++ b/tasks/downloads.yml
@@ -1,13 +1,5 @@
 - name: Downloading files
 
-  tasks:
-
-    - name: Create focal dirctory
-      file:
-        path: focalgdm3.sh
-        state: directory
-
-    - name: Get file
-      get_url:
-        url: https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
-        dest: focal/focalgdm3.sh
+  get_url:
+    url: https://github.com/PRATAP-KUMAR/focalgdm3/raw/master/focalgdm3.sh
+    dest: ./focalgdm3.sh
